--- a/packages/kernel/package.json
+++ b/packages/kernel/package.json
@@ -6,21 +6,18 @@
   "main": "index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "test": "jest"
+    "start": "electron ./e2e/server/electron.js",
+    "test": "playwright test",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "node-addon-api": "^5.0.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.4.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest": "^29.4.1",
-    "ts-jest": "^29.0.5",
+    "@playwright/test": "^1.30.0",
+    "@types/node": "^18.13.0",
+    "electron": "^22.2.0",
+    "node-addon-api": "^5.1.0",
+    "playwright": "^1.30.0",
     "typescript": "^4.9.3"
   }
 }
