--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "window-manager",
-  "private": true,
-  "version": "0.0.1",
-  "description": "electron vite",
-  "author": "hank",
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@wm/kernel": "workspace:^1.0.0",
-    "electron": "^22.2.0",
-    "electron-builder": "^23.6.0",
-    "electron-updater": "^5.3.0",
-    "fs-extra": "^11.1.0",
-    "pinia": "^2.0.29",
-    "sass": "^1.58.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vite-plugin-optimizer": "^1.4.2",
-    "vue": "^3.2.45",
-    "vue-router": "4",
-    "vue-tsc": "^1.0.11"
-  }
+    "name": "window-manager",
+    "private": true,
+    "version": "0.0.1",
+    "description": "electron vite",
+    "author": "hank",
+    "scripts": {
+        "start": "npm run dev",
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "rebuild": "npm rebuild --runtime=electron --target=1.1.3 --disturl=https://atom.io/download/atom-shell --abi=83",
+        "preview": "vite preview",
+        "release": "standard-version"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.4.0",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "@wm/kernel": "workspace:^0.0.2",
+        "electron": "^22.2.0",
+        "electron-builder": "^23.6.0",
+        "electron-updater": "^5.3.0",
+        "fs-extra": "^11.1.0",
+        "pinia": "^2.0.29",
+        "sass": "^1.58.0",
+        "standard-version": "^9.5.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0",
+        "vite-plugin-optimizer": "^1.4.2",
+        "vue": "^3.2.45",
+        "vue-router": "4",
+        "vue-tsc": "^1.0.11"
+    }
 }
