--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "ESNext",
       "DOM"
     ],
+    "types": [
+        "@wm/kernel"
+    ],
     "skipLibCheck": true,
     "noEmit": true,
     "rootDir": "./",
@@ -23,6 +26,7 @@
     }
   },
   "include": [
+    "src/**/*.d.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
