--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     },
     "devDependencies": {
         "@types/jest": "^29.4.0",
+        "@types/lodash-es": "^4.17.6",
         "@vitejs/plugin-vue": "^4.0.0",
         "@wm/kernel": "workspace:^0.0.2",
         "electron": "^22.2.0",
         "electron-builder": "^23.6.0",
         "electron-updater": "^5.3.0",
         "fs-extra": "^11.1.0",
+        "lodash-es": "^4.17.21",
         "pinia": "^2.0.29",
         "sass": "^1.58.0",
         "standard-version": "^9.5.0",
